Create JlinkTask for better usage